--- a/index.html
+++ b/index.html
@@ -2,15 +2,32 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8" />
-   <title>October 24, 2023</title>
+   <title>October 26, 2023</title>
    <meta name="keywords" content = "art, design, UNC">
-</head>
-<body>
 
-   <p>today is <i>chilly</i>.</p>
+   <link rel="stylesheet" type="text/css" href="default.css">
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <p>today is <i>chilly</i>.</p>
    <p>UNC <b>football</b><br>dropped to 17.</p>
+   </div>div>
 
+        
+  
    <p>Hi there! My name is Brian and I am a Second Year Student at the University of North Carolina at Chapel Hill.</p>
+
+<img src="graphics/basketball.png"> alt="basketball cartoon"
+
+
+<a href="page2.html" target="_blank">page 2</a>
+
+<h5>h5</h5>
+<hr>
+<h1>h1</h1>
+
+
 
 
 
