--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
    <p>Hi there! My name is Brian and I am a Second Year Student at the University of North Carolina at Chapel Hill.</p>
 
-<img src="graphics/basketball.png"> alt="basketball cartoon"
+<img src="graphics/basketball.png"> 
 
 
 <a href="page2.html" target="_blank">page 2</a>
