--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <img src="graphics/basketball.png"> 
 
 
-<a href="https://goheels.com/sports/mens-basketball">UNC Basketball target="_blank">page 2</a>
+<a href="https://goheels.com/sports/mens-basketball">UNC Basketball</a>
 
 <h5>h5</h5>
 <hr>
