--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <p>Hi there! My name is Brian and I am a Second Year Student at the University of North Carolina at Chapel Hill.</p>
 
 <img src="https://static.vecteezy.com/system/resources/previews/021/629/702/original/basketball-ball-cartoon-icon-illustration-sports-icon-concept-illustration-free-vector.jpg"> 
-alt="basketball"
+alt="basketball">
 
 <a href="https://goheels.com/sports/mens-basketball">UNC Basketball</a>
 
