--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <img src="https://static.vecteezy.com/system/resources/previews/021/629/702/original/basketball-ball-cartoon-icon-illustration-sports-icon-concept-illustration-free-vector.jpg"> 
 
 
-<a href="https://goheels.com/sports/mens-basketball">UNC Basketball</a>
-
+<a href="https://uncch.instructure.com/courses/34279/assignments/289814">UNC Assignment 7B</a>
+ target="_blank">page 2</a>
 
 <h5>h5</h5>
 <hr>
