--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <p>today is <i>chilly</i>.</p>
    <p>UNC <b>football</b><br>dropped to 17.</p>
-   </div>
+   </div>div>
 
         
   
@@ -24,9 +24,9 @@
 <a href="https://uncch.instructure.com/courses/34279/assignments/289814"> Assignment 7B</a>
 target="_blank">page 2</a>
 
-<h5</h5>
+<h5>h5</h5>
 <hr>
-<h1</h1>
+<h1>h1</h1>
 
 
 
