--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <a href="https://uncch.instructure.com/courses/34279/assignments/289814"> Assignment 7B</a>
 target="_blank">page 2</a>
 
+body{
+    background-color: yellow;
+}
+
+
 <h5>h5</h5>
 <hr>
 <h1>h1</h1>
