--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
 <a href="https://uncch.instructure.com/courses/34279/assignments/289814"> Assignment 7B</a>
 target="_blank">page 2</a>
 
-body{
-    background-color: yellow;
-}
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+ }
+ a {
+  color: #3366BB;
+  text-decoration: none;
+ }
+ a:hover {
+  text-decoration: underline;
+ }
 
 
 <h5>h5</h5>
