--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <a href="https://uncch.instructure.com/courses/34279/assignments/289814"> Assignment 7B</a>
 target="_blank">page 2</a>
 
-
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
 
 <h5>h5</h5>
 <hr>
