--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ target="_blank">page 2</a>
 
 <!DOCTYPE html>
 <html>
-<body style="background-color:green;">
+<body style="background-color:yellow;">
 
 <h5>h5</h5>
 <hr>
