--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
 <a href="https://uncch.instructure.com/courses/34279/assignments/289814"> Assignment 7B</a>
+target="_blank">page 2</a>
 
 
 <!DOCTYPE html>
