--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <a href="https://github.com/bryang3837/bryang3837.github.io/blob/main/github%20page.html"> Assignment 7B</a>
-
+target="_blank">page 2</a>
 
 <!DOCTYPE html>
 <html>
