--- a/sample page.html
+++ b/sample page.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8" />
-   <title> From ‘Goodfellas’ to ‘Flower Moon’: How Scorsese Has Rethought Violence</title>
+   <title> November 6, 2023</title>
+   </head>
+   <body>
+   <h2>From ‘Goodfellas’ to ‘Flower Moon’: How Scorsese Has Rethought Violence</h2>
    <meta name="keywords" content = "art, design, UNC">
 
    <link rel="stylesheet" type="text/css" href="default.css">
