--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8" />
-   <title> November 2, 2023</title>
+   <title> November 6, 2023</title>
    <meta name="keywords" content = "art, design, UNC">
 
    <link rel="stylesheet" type="text/css" href="default.css">
@@ -21,7 +21,7 @@
 <img src="https://static.vecteezy.com/system/resources/previews/021/629/702/original/basketball-ball-cartoon-icon-illustration-sports-icon-concept-illustration-free-vector.jpg"> 
 
 
-<a href="https://github.com/bryang3837/bryang3837.github.io/blob/main/github%20page.html"> Assignment 7B</a>
+<a href="https://bryang3837.github.io/sample%20page.html"> Assignment 7B</a>
 target="_blank">page 2</a>
 
    
