--- a/pageinterest1.html
+++ b/pageinterest1.html
@@ -21,7 +21,7 @@
        	<h2>Introduction</h2>
        	<p>Welcome to our exploration of the vast universe and the incredible achievements of space exploration.</br>With evidence of human curiosity and innovation, space exploration includes the discovery and understanding of celestial bodies beyond Earth. Since the launch of Sputnik-1 in 1957, humanity has accomplished major milestones, from the moon landing to the exploration of distant planets. This ongoing journey reveals the secrets of the universe, pushing the boundaries of science and technology.</p>
    	</section>
-
+<img src="https://miro.medium.com/v2/resize:fit:1400/0*WhzvyDkAVwRPR322" alt="vast universe">
    	<section id="history">
        	<h2>History</h2>
        	<p>Discover the fascinating history of space exploration, from the first satellite to landing on the moon.</br>The history of space exploration is a story of human ingenuity and ambition. It began with the launch of Sputnik 1 by the Soviet Union in 1957, at the dawn of the Space Age. This was followed by Yuri Gagarin's orbital flight and NASA's iconic Apollo landing. The Cold War competition led to rapid progress, leading to the creation of the International Space Station and the robotic mission to Mars. The age of space travel allowed for reuse. Today, collaboration between space agencies and private companies defines a new era, promising new explorations, scientific discoveries and the possibility of human life beyond our home planet.</p>
