--- a/introduction.html
+++ b/introduction.html
@@ -11,6 +11,7 @@
    	<h1>Introduction to Space Exploration</h1>
    	<p>
    	The exploration of space is a grand venture, a collective human effort to expand our understanding and reach beyond the boundaries of Earth. For centuries, we have been captivated by the vastness of the stars, pushing us to embark on a journey to explore the wonders of the cosmos. With the help of advanced technology in the mid-20th century, we entered a new era of space exploration. Both governments and private organizations passionately participate in this endeavor, fueled by a thirst for knowledge, boundless technological progress, and the possibility of discovering new habitats beyond Earth.</br></br>The realm of space exploration encompasses a diverse range of endeavors, spanning from launching satellites for crucial communication and navigation purposes to embarking on bold missions with both unmanned and manned spacecraft to explore far-off heavenly bodies. This pursuit not only drives global cooperation, as seen through partnerships between esteemed organizations such as NASA and ESA, but also spurs on ambitious undertakings that propel our knowledge of the universe to new heights.</p>
+ <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.calacademy.org%2Fevents%2Fprograms%2Fbeyond-boundaries-0&psig=AOvVaw0S2Sqktk5CIG7x8U_I4sAB&ust=1700232881051000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIiLgJnjyIIDFQAAAAAdAAAAABAW" alt="earth boundaries">
    </div>
 </body>
 </html>
