--- a/introduction.html
+++ b/introduction.html
@@ -16,6 +16,6 @@
    
    <!DOCTYPE html>
    <html>
-   <body style="background-color:blue;">
+   <body style="background-color:neonblue;">
 </body>
 </html>
