--- a/sample page.html
+++ b/sample page.html
@@ -3,9 +3,6 @@
 <head>
    <meta charset="UTF-8" />
    <title> November 6, 2023</title>
-   </head>
-   <body>
-   <h2>From ‘Goodfellas’ to ‘Flower Moon’: How Scorsese Has Rethought Violence</h2>
    <meta name="keywords" content = "art, design, UNC">
 
    <link rel="stylesheet" type="text/css" href="default.css">
@@ -21,16 +18,17 @@
 <img src="https://static.vecteezy.com/system/resources/previews/021/629/702/original/basketball-ball-cartoon-icon-illustration-sports-icon-concept-illustration-free-vector.jpg"> 
 
 
+<a href="https://uncch.instructure.com/courses/34279/assignments/289814"> Assignment 7B</a>
+target="_blank">page 2</a>
 
 
 <!DOCTYPE html>
 <html>
 <body style="background-color:yellow;">
 
-</h5>
+<h5>h5</h5>
 <hr>
-</h1>
-
+<h1>h1</h1>
 
 
 
