--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <a href="https://bryang3837.github.io/sample%20page.html"> Assignment 7B</a>
 <a href="https://bryang3837.github.io/pageinterest1.html"> Assignment 7C</a>
-<a href="https://bryang3837.github.io/twine.html"> Assignment 8A</a>
+<a href="https://bryang3837.github.io/twine%20story.html"> Assignment 8A</a>
    
 </h5>
 <hr>
