--- a/twine story.html
+++ b/twine story.html
@@ -23,6 +23,10 @@ color: #008000:
 text-decoration: none;
 border-bottom: 4px solid #008000;
 }
+tw-sidebar
+{
+	display: none;
+}
 .center f
 display: block;
 margin-left: auto;
